fihished last screen

--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -5,9 +5,12 @@ block title
 
 block content
   .start
-    .start__img
+
     .text
-      span 5 Hidden Dogs
+      .text__container
+        span 5 Hidden Dogs
+        .text__container-img
+          img(src='src/assets/img/doggy.png' alt="lady")
       span Can you spot them?
   .finish
     .finish__lady
