--- a/src/styles/base/global.sass
+++ b/src/styles/base/global.sass
@@ -20,12 +20,40 @@ body
   display: flex
   flex-direction: column
   align-items: center
-  justify-content: space-between
+  justify-content: center
   box-sizing: border-box
-  padding: 50px
+  padding: 30px
   width: 100%
   height: 100%
   background: black
+
+.finish
+  &__lady
+    position: absolute
+    z-index: 1
+    transform: matrix(-1, 0, 0, 1, 0, 0)
+    max-width: 240px
+
+    &:after
+      content: ''
+      z-index: 4
+      left: 0
+      width: 100%
+      position: absolute
+      bottom: 0
+      height: 50px
+      background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%, rgba(255,255,255,0) 100%)
+
+  &__img
+    z-index: 3
+    max-width: 260px
+    margin-bottom: 200px
+
+  .text
+    margin-bottom: 200px
+
+  &.animation
+    opacity: 1
 
 .hidden
   opacity: 0
@@ -38,16 +66,40 @@ body
   opacity: 0.9
   transition: .5s ease-in
 
-.text
+.title
+  position: relative
+  z-index: 3
   color: white
-  font-size: 18px
-  line-height: 22px
+  font-size: 50px
+  line-height: 52px
   font-weight: bold
+
+.text
+  position: relative
+  z-index: 3
+  text-align: center
+
+  span
+    color: white
+    font-size: 38px
+    line-height: 42px
+    font-weight: bold
+
+  &__container
+    display: flex
+    align-items: center
+
+    &-img
+      max-width: 80px
+      transform: matrix(-1, 0, 0, 1, 0, 0)
+
+img
+  width: 100%
 
 .button
   position: absolute
   z-index: 2
-  bottom: 10%
+  bottom: 5%
   font-size: 30px
   line-height: 34px
   font-weight: bold
