--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -5,7 +5,6 @@ block title
 
 block content
   .start
-
     .text
       .text__container
         span 5 Hidden Dogs
@@ -19,7 +18,6 @@ block content
       img(src='src/assets/img/logo.png' alt="logo")
     b.title Great Job
     .text
-      span 5 Hidden Dogs
-      span Can you spot them
+      span Can you solve every mystery?
   a(href="https://www.g5e.com/ru/").button play now
 
