--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -9,13 +9,13 @@ block content
       .text__container
         span 5 Hidden Dogs
         .text__container-img
-          img(src='src/assets/img/doggy.png' alt="lady")
+          img(src=require('@/assets/img/doggy.png') alt="lady")
       span Can you spot them?
   .finish
     .finish__lady
-      img(src='src/assets/img/char.png' alt="lady")
+      img(src=require('@/assets/img/char.png') alt="lady")
     .finish__img
-      img(src='src/assets/img/logo.png' alt="logo")
+      img(src=require('@/assets/img/logo.png') alt="logo")
     b.title Great Job
     .text
       span Can you solve every mystery?
